--- a/index.css
+++ b/index.css
@@ -1,22 +1,15 @@
 html {
-  color: #333;
   font-family: sans-serif;
   font-size: 18px;
-}
-
-html,
-body {
-  height: 100%;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-}
-
-div {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
 }
 
 #mapContainer {
@@ -25,69 +18,27 @@ div {
   /* margin-right: auto; */
   /* margin-top: 5rem; */
   /* margin-left: 10rem; */
-  margin-left: auto;
-  margin-right: auto;
 
   z-index: 1;
-  width: 500px;
-  height: 500px;
+  width: 80%;
+  height: 80%;
+  margin: 10%;
   display: flex;
 }
 
-.main-container {
-  /* background-color: aqua; */
+.screencenter {
+  background-color: #373737;
+  height: 80vh;
+  margin-top: 10vh;
+  margin-bottom: 10vh;
+}
+
+#scrollview {
+  width: 90%;
+  height: 80%;
+  margin: 5%;
+}
+.centerChildren {
   display: flex;
-  /* height: 600px; */
-  /* width: 900px; */
-  background-color: antiquewhite;
-  /* margin-bottom: 5rem; */
-  z-index: 2;
-  /* margin-left: auto;
-  margin-right: auto; */
-}
-
-.left-container {
-  background: #fff;
-  margin-top: 5rem;
-  border-radius: 5px;
-  height: 500px;
-  width: 700px;
-  border-style: none;
-  display: inline-block;
-  flex: 1;
-  float: ;
-  margin-right: auto;
-  padding: 1rem;
-}
-
-.right-container {
-  background-color: floralwhite;
-  flex: 1;
-  padding: 1rem;
-}
-
-.search-event-button {
-  /* margin: auto; */
-  display: flex;
-  align-self: flex-end;
-  align-items: center;
-  margin-left: auto;
-  margin-right: 10rem;
-  font-family: sans-serif;
-  /* margin-top: 50px; */
-}
-
-.search-event-button-style {
-  background: #fff;
-  border-radius: 5px;
-  border-style: none;
-  display: inline-block;
-  height: 30px;
-  margin: 1rem;
-  position: relative;
-  width: 300px;
-}
-
-.button-shadow {
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  justify-content: center;
 }
