--- a/index.css
+++ b/index.css
@@ -29,40 +29,40 @@ div {
   margin-right: auto;
 
   z-index: 1;
-  width: 500px;
-  height: 500px;
+  width: 400px;
+  height: 400px;
   display: flex;
 }
 
 .main-container {
-  /* background-color: aqua; */
   display: flex;
-  /* height: 600px; */
-  /* width: 900px; */
   background-color: antiquewhite;
-  /* margin-bottom: 5rem; */
   z-index: 2;
-  /* margin-left: auto;
-  margin-right: auto; */
+}
+
+.header-bar {
+  flex: 0.2;
+}
+
+.content-container {
+  flex: 0.8;
+  display: flex;
+  flex-direction: row;
 }
 
 .left-container {
   background: #fff;
-  margin-top: 5rem;
   border-radius: 5px;
-  height: 500px;
-  width: 700px;
   border-style: none;
   display: inline-block;
-  flex: 1;
-  float: ;
+  flex: 0.6;
   margin-right: auto;
   padding: 1rem;
 }
 
 .right-container {
   background-color: floralwhite;
-  flex: 1;
+  flex: 0.4;
   padding: 1rem;
 }
 
@@ -90,4 +90,8 @@ div {
 
 .button-shadow {
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+#result-list {
+  visibility: hidden;
 }
